feat: check nickname API
